# Chip-8-Emulator

./: CMakeLists.txt  README.md
include/: CMakeLists.txt  cpu.hpp  display.hpp  main.hpp  platform.hpp  sound.hpp
src/: CMakeLists.txt  cpu.cpp  display.cpp  main.cpp  platform.cpp  sound.cpp
tests/: CMakeLists.txt  test_cmake_demo.cpp
